slider is ready

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     <section class="slider">
         <h3>The Tiffany Icons</h3>
         <div class="banner">
-            <i class="bi bi-arrow-left prev"></i>
             <img src="assets/images/1.webp" class="show" alt="">
             <img src="assets/images/2.webp" alt="">
             <img src="assets/images/3.webp" alt="">
@@ -65,10 +64,13 @@
             <img src="assets/images/150.jpg" alt="">
             <img src="assets/images/160.jpg" alt="">
             <img src="assets/images/170.jpg" alt="">
+            <i class="bi bi-arrow-left prev"></i>
             <i class="bi bi-arrow-right next"></i>
         </div>
     </section>
     <!-- end tiffany icons -->
+
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
