--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Tiffany & co. || Parhamonline</title>
     <!-- bootstrap -->
     <link rel="stylesheet" href="./css/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <!-- css file -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -31,23 +33,29 @@
     </header>
     <!-- end header -->
     <!-- hero -->
-    <section class="hero">
-        <video src="./assets/video/2025_HW_HP_Hero_Desktop.mp4" class="hero-video" autoplay muted loop></video>
-        <div class="hero-text">
-            <p>HardWear by Tiffany <br>
-                Showcasing individual stories of power <br>
-                and resilience,award-winning actresses <br>
-                Greta Lee and Mikey Madison and acclaimed <br>
-                painter Anna Weyant wear the bold <br>
-                links of HardWear by Tiffany, a <br>
-                symbol of loves transformative strength. </p>
-        </div>
-    </section>
+    <div class="container">
+        <section class="hero row">
+            <div class="col-12"> <video src="./assets/video/2025_HW_HP_Hero_Desktop.mp4" class="hero-video" autoplay
+                    muted loop></video></div>
+            <div class="col-12">
+                <div class="hero-text">
+                    <p>HardWear by Tiffany <br>
+                        Showcasing individual stories of power <br>
+                        and resilience,award-winning actresses <br>
+                        Greta Lee and Mikey Madison and acclaimed <br>
+                        painter Anna Weyant wear the bold <br>
+                        links of HardWear by Tiffany, a <br>
+                        symbol of loves transformative strength. </p>
+                </div>
+            </div>
+        </section>
+    </div>
+
     <!-- end hearo -->
     <!-- Tiffany icons -->
-    <section class="slider">
+    <section class="slider  ">
         <h3>The Tiffany Icons</h3>
-        <div class="banner">
+        <div class="banner ">
             <img src="assets/images/1.webp" class="show" alt="">
             <img src="assets/images/2.webp" alt="">
             <img src="assets/images/3.webp" alt="">
@@ -64,13 +72,136 @@
             <img src="assets/images/150.jpg" alt="">
             <img src="assets/images/160.jpg" alt="">
             <img src="assets/images/170.jpg" alt="">
-            <i class="bi bi-arrow-left prev"></i>
-            <i class="bi bi-arrow-right next"></i>
+            <i class="bi bi-arrow-left prev "></i>
+            <i class="bi bi-arrow-right next "></i>
         </div>
     </section>
     <!-- end tiffany icons -->
+    <!-- two picture side by side -->
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6 row-cols-2">
+                <img src="./assets/images/right.webp" class="right-img" alt="right-img">
+                <article class="right-img-info">
+                    <h2 class="right-img-title">Elsa Peretti® Jewelry</h2>
+                    <a href="#" class="img-tag">shop now</a>
+                </article>
+            </div>
+            <div class="col-12 col-md-6 row-cols-2">
+                <img src="./assets/images/left.webp" class="left-img" alt="left">
+                <article class="left-img-info">
+                    <h2 class="left-img-title">New Sixteen Stone by Tiffany</h2>
+                    <a href="#" class="img-tag">shop now</a>
+                </article>
+            </div>
+        </div>
+    </div>
+    </div>
+    <!-- end two picture side by side -->
+    <!-- category -->
+    <h2>Shop by Category</h2>
+    <p>Brilliant design and unparalleled craftsmanship.</p>
+    <div class=" category">
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <img class="category-img " src="./assets/images/11.webp" alt="category-img">
+                <div class="cetegory-title ">
+                    <p>Necklaces & Pendants</p>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <img class="category-img" src="./assets/images/22.webp" alt="category-img">
+                <div class="cetegory-title">
+                    <p>Earrings</p>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <img class="category-img" src="./assets/images/33.webp" alt="category-img">
+                <div class="cetegory-title">
+                    <p>Rings</p>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <img class="category-img" src="./assets/images/44.webp" alt="category-img">
+                <div class="cetegory-title">
+                    <p>Bracelets</p>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <img class="category-img" src="./assets/images/55.webp" alt="category-img">
+                <div class="cetegory-title">
+                    <p>Watches</p>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+                <img class="category-img" src="./assets/images/66.webp" alt="category-img">
+                <div class="cetegory-title">
+                    <p>Home</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end category -->
+    <!-- stories -->
+    <h2 class="story-title">Stories</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-md-4">
+                <img src="./assets/images/one.webp" alt="story-img" class="story-img">
+                <div class="story-card">
+                    <h3>Tiffany & Co.for The Nature Conservanc</h3>
+                    <p>Introducing the Love For Our Oceans initiative,featuring T Smile by Tiffany cord bracelet…</p>
+                    <a href="#">lern more</a>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <img src="./assets/images/two.webp" alt="story-img" class="story-img">
+                <div class="story-card">
+                    <h3>New In: Tiffany Sunglasses</h3>
+                    <p>Discover our latest collections, each a synergy of emblematic motifs and sophisticated sil…</p>
+                    <a href="#">lern more</a>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <img src="./assets/images/three.webp" alt="story-img" class="story-img">
+                <div class="story-card">
+                    <h3>New from Blue Book 2024</h3>
+                    <p>The fall expression of our 2024 high jewelry collection showcases expertly crafted masterw…</p>
+                    <a href="#">lern more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end stories -->
+    <!-- login section -->
+    <section class="login-section">
+        <img src="./assets/images/big photo center.webp" class="login-img" alt="login-img">
+        <div class="login-container show">
+            <div class="login-box">
+                <h2>Login</h2>
+                <form>
+                    <div class="input-box">
+                        <input type="text" class="username" autocomplete="username" name="username" required
+                            placeholder="">
+                        <label>Username</label>
+                    </div>
+                    <div class="input-box">
+                        <input type="password" class="password" autocomplete="current-password" name="password" required
+                            placeholder="">
+                        <label>Password</label>
+                        <br>
+                        <button type="submit" class=" btn btn-outline-primary">Login</button>
+                    </div>
+                </form>
+            </div>
+        </div>
 
+    </section>
+    <!-- end login section -->
     <script src="./js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
