--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <!-- hero -->
     <div class="container">
         <section class="hero row">
-            <div class="col-12"> <video src="./assets/video/2025_HW_HP_Hero_Desktop.mp4" class="hero-video" autoplay
-                    muted loop></video></div>
-            <div class="col-12">
+            <div class="col-12 col-sm-6"> <video src="./assets/video/2025_HW_HP_Hero_Desktop.mp4" class="hero-video"
+                    autoplay muted loop></video></div>
+            <div class="col-12 col-sm-6">
                 <div class="hero-text">
                     <p>HardWear by Tiffany <br>
                         Showcasing individual stories of power <br>
@@ -198,6 +198,31 @@
 
     </section>
     <!-- end login section -->
+    <!-- tiffany icons 2 -->
+    <div class="container icons">
+        <h2>The Tiffany Icons</h2>
+        <p>For 187 years, Tiffanys iconic collections have helped an ever-changing world speak the ever-changing
+            language of love.</p>
+        <div class="row">
+            <div class="col-sm-6 col-lg-3">
+                <img src="./assets/images/111.webp" class="icon-img" alt="icon-img">
+                <p class="icons-img-title">HardWear by Tiffany</p>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <img src="./assets/images/222.webp" class="icon-img" alt="icon-img">
+                <p class="icons-img-title">Lock Tiffany</p>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <img src="./assets/images/333.webp" class="icon-img" alt="icon-img">
+                <p class="icons-img-title">T by Tiffany</p>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <img src="./assets/images/444.webp" class="icon-img" alt="icon-img">
+                <p class="icons-img-title">Knot by Tiffany</p>
+            </div>
+        </div>
+    </div>
+    <!-- end tiffany icons 2 -->
     <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
